[TASK] templates adapted for fluid. TypoScript libraries for content and navigation restored.

--- a/Resources/Private/Templates/content-1col.html
+++ b/Resources/Private/Templates/content-1col.html
@@ -15,7 +15,7 @@
 	<section class="container" id="load-content">
 		<div class="row">
 			<div class="span12">
-				<f:cObject typoscriptObjectPath="lib.content.main">
+				<f:cObject typoscriptObjectPath="lib.content.stage">
 				</f:cObject>
 			</div>
 		</div>
