--- a/Resources/Private/Templates/content-2col-25-75.html
+++ b/Resources/Private/Templates/content-2col-25-75.html
@@ -17,7 +17,7 @@
 		<div class="row">
 			<div class="span3">
 				<aside>
-					<f:cObject typoscriptObjectPath="lib.content.left">
+					<f:cObject typoscriptObjectPath="lib.content.main">
 						<h3>Sidebar</h3>
 						<article>
 							<h4>Relevanter Sidebar Content</h4>
@@ -34,7 +34,7 @@
 				</aside>
 			</div>
 			<div class="span9">
-				<f:cObject typoscriptObjectPath="lib.content.main">
+				<f:cObject typoscriptObjectPath="lib.content.stage">
 					<h1>Inhaltsseite</h1>
 
 					<h2>Das ist eine Subheadline</h2>
