--- a/Resources/Private/Templates/content-2col-75-25.html
+++ b/Resources/Private/Templates/content-2col-75-25.html
@@ -16,7 +16,7 @@
 	<section class="container" id="load-content">
 		<div class="row">
 			<div class="span9">
-				<f:cObject typoscriptObjectPath="lib.content.main">
+				<f:cObject typoscriptObjectPath="lib.content.stage">
 					<h1>Inhaltsseite</h1>
 
 					<h2>Das ist eine Subheadline</h2>
