--- a/Resources/Private/Templates/content-3col.html
+++ b/Resources/Private/Templates/content-3col.html
@@ -16,7 +16,7 @@
 		<div class="row">
 			<div class="span3">
 				<aside>
-					<f:cObject typoscriptObjectPath="lib.content.left">
+					<f:cObject typoscriptObjectPath="lib.content.main">
 						<div class="accordion" id="accordion1">
 							<div class="accordion-group">
 								<div class="accordion-heading visible-phone">
@@ -55,7 +55,7 @@
 				</aside>
 			</div>
 			<div class="span6">
-				<f:cObject typoscriptObjectPath="lib.content.main">
+				<f:cObject typoscriptObjectPath="lib.content.stage">
 					<h1>Inhaltsseite</h1>
 
 					<h2>Das ist eine Subheadline</h2>
