[TASK] page templates changed to use default layout

--- a/Resources/Private/Templates/special-home.html
+++ b/Resources/Private/Templates/special-home.html
@@ -1,31 +1,8 @@
-<!DOCTYPE html>
 <f:layout name="Default" />
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>TYPO3 Sitestarter Content</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="">
-	<meta name="author" content="">
+<f:section name="header">
+	<f:render partial="Page/header"/>
+</f:section>
 
-	<!-- Stylesheets -->
-	<link href="css/bootstrap.css" rel="stylesheet">
-	<link href="css/bootstrap-responsive.css" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet">
-	<link href="css/mediaqueries.css" rel="stylesheet">
-	<link href="css/yoxview.css" rel="stylesheet">
-
-	<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-	<!--[if lt IE 9]>
-	<script src="js/html5shiv.js"></script>
-	<![endif]-->
-
-	<!-- Le fav and touch icons -->
-	<link rel="shortcut icon" href="img/favicon.png">
-
-</head>
-
-<body>
 <f:section name="body">
 
 	<div class="container"><!-- BEGIN: container -->
@@ -159,6 +136,3 @@
 	</div>
 	<!-- END: container -->
 </f:section>
-
-</body>
-</html>
