--- a/Resources/Private/Templates/links240_mitte540.html
+++ b/Resources/Private/Templates/links240_mitte540.html
@@ -1,94 +1,83 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Bolschewistische Kurkapelle Schwarz-Rot</title>
-<link href="stylesheets/main.css" media="screen" rel="Stylesheet" type="text/css" />
-<link href="stylesheets/wide.css" media="screen" rel="Stylesheet" type="text/css" />
-<link href="stylesheets/dam_frontend_ddl.css" media="screen" rel="Stylesheet" type="text/css" />
-<link href="stylesheets/dam_frontend_default_css_pi1.css" media="screen" rel="Stylesheet" type="text/css" />
-<link href="stylesheets/dam_frontend_style.css" media="screen" rel="Stylesheet" type="text/css" />
-<link rel="shortcut icon" href="favicon.ico"/>
-</head>
+<f:layout name="Default"/>
+<f:section name="header">
+    <f:render partial="Page/header"/>
+</f:section>
 
-<body>
-<!-- ###DOCUMENT_BODY### START -->
-<!-- links240_mitte540.html -->
-<div class="wide">
-	<!-- BEGIN wrap -->
-	<div id=wrap>
-		<div id="top">
-			<div class="top-tl">
-				<div class="top-tr">
-				</div>
-			</div>
-		</div>
-	 	<!-- BEGIN head -->
-		<div id=head>
-			<div id=head_content>
-		 		<a href="http://www.bolschewistischekurkapelle.org">
-		 			<div id=logo>
-						<h1>Bolschewistische Kurkapelle Schwarz-Rot</h1>
-					</div>
-				</a>
-				<a name="top"></a>
-			</div>
-		</div>
-	 	<!-- END head -->
-	 	<div id="stage-wrap">
-			<div id="mainnav">
-			    <!-- ###MAINNAV### START -->
-			    <!-- ###MAINNAV### END -->
-		    </div>
-	 	</div>
-	    
-	 <!-- BEGIN content col-->
-	 <div id=content_col>
-	   <div id=left_content class="w240">
-	   		<!--###CONTENT_LEFT### START-->
-	   		<!-- ###CONTENT_LEFT### END -->
-	   </div>
-	   <div id=content class="w540">
-	   <!-- ###CONTENT### START -->
-	   <!-- ###CONTENT### END -->
-	   </div>
-	    <!-- BEGIN right col -->
-	    <div id=right_col>
-	     <div id=right_content>
-	      <!-- ###CONTENT_RIGHT### START -->
-	      <!-- ###CONTENT_RIGHT### END -->
-	     </div>
-	    </div>
-	    <!-- END right col -->
-	 </div>
-	
-	 <div id="bottom">
-	 	<div class="bottom-bl">
-	 		<div class="bottom-br">
-	 			<div id="quicklinks"">
-		 			<ul>
-		 			<!-- ###QUICKLINKS### START -->
-		 			<!-- ###QUICKLINKS### END -->
-		 			<li class="quicklink_item">###LOGOUT###</li>
-		 			</ul>
-	 			</div>
-	 		</div>
-	 	</div>
-	 <!-- BEGIN UNTEN -->
-	 <div id=unten>
-	  <!-- ###UNTEN### START -->
-	  <!-- ###UNTEN### END -->
-	 </div>
-	 <!-- END UNTEN-->
-	 <div id="lang-nav">
-	    <!-- ###LANGNAV### START -->
-	    <!-- ###LANGNAV### END -->
-	 </div>
-	 </div>
-	</div>
-	<!-- END wrap -->
-</div>
-<!-- ###DOCUMENT_BODY### END -->
-</body>
-</html>
+<f:section name="body">
+    <!-- links240_mitte540.html -->
+    <div class="wide">
+        <!-- BEGIN wrap -->
+        <div id=wrap>
+            <div id="top">
+                <div class="top-tl">
+                    <div class="top-tr">
+                    </div>
+                </div>
+            </div>
+            <!-- BEGIN head -->
+            <div id=head>
+                <div id=head_content>
+                    <a href="http://www.bolschewistischekurkapelle.org">
+                        <div id=logo>
+                            <h1>Bolschewistische Kurkapelle Schwarz-Rot</h1>
+                        </div>
+                    </a>
+                    <a name="top"></a>
+                </div>
+            </div>
+            <!-- END head -->
+            <div id="stage-wrap">
+                <div id="mainnav">
+                    <!-- ###MAINNAV### START -->
+                    <!-- ###MAINNAV### END -->
+                </div>
+            </div>
+
+            <!-- BEGIN content col-->
+            <div id=content_col>
+                <div id=left_content class="w240">
+                    <!--###CONTENT_LEFT### START-->
+                    <!-- ###CONTENT_LEFT### END -->
+                </div>
+                <div id=content class="w540">
+                    <!-- ###CONTENT### START -->
+                    <!-- ###CONTENT### END -->
+                </div>
+                <!-- BEGIN right col -->
+                <div id=right_col>
+                    <div id=right_content>
+                        <!-- ###CONTENT_RIGHT### START -->
+                        <!-- ###CONTENT_RIGHT### END -->
+                    </div>
+                </div>
+                <!-- END right col -->
+            </div>
+
+            <div id="bottom">
+                <div class="bottom-bl">
+                    <div class="bottom-br">
+                        <div id="quicklinks"
+                        ">
+                        <ul>
+                            <!-- ###QUICKLINKS### START -->
+                            <!-- ###QUICKLINKS### END -->
+                            <li class="quicklink_item">###LOGOUT###</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!-- BEGIN UNTEN -->
+            <div id=unten>
+                <!-- ###UNTEN### START -->
+                <!-- ###UNTEN### END -->
+            </div>
+            <!-- END UNTEN-->
+            <div id="lang-nav">
+                <!-- ###LANGNAV### START -->
+                <!-- ###LANGNAV### END -->
+            </div>
+        </div>
+    </div>
+    <!-- END wrap -->
+    </div>
+</f:section>
