--- a/Resources/Private/Templates/login.html
+++ b/Resources/Private/Templates/login.html
@@ -1,86 +1,77 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title></title>
-<link href="stylesheets/main.css" media="screen" rel="Stylesheet"
-type="text/css" />
-<link rel="shortcut icon" href="favicon.ico"/>
-</head>
+<f:layout name="Default"/>
+<f:section name="header">
+    <f:render partial="Page/header"/>
+</f:section>
 
-<body>
-<!-- ###DOCUMENT_BODY### START -->
-<!-- BEGIN wrap -->
-<div id=wrap>
-<div class="center">
-	<div id="top">
-		<div class="top-tl">
-			<div class="top-tr">
-			</div>
-		</div>
-	</div>
- 	<!-- BEGIN head -->
-	<div id=head>
-		<div id=head_content>
-	 		<a href="http://www.bolschewistischekurkapelle.org">
-	 			<div id=logo>
-					<h1>Bolschewistische Kurkapelle Schwarz-Rot</h1>
-				</div>
-			</a>
-			<a name="top"></a>
-		</div>
-	</div>
- <!-- END head -->
- <!-- BEGIN content col-->
- <div id=content_col>
-   <div id=content>
-   <!-- ###CONTENT### START -->
-     <h2>Content Column</h2>
-     <p>Lorem <a href=#>ipsum</a> dolor sit amet, consetetur sadipscing
-elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
-aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
-dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
-Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
-sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
-magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
-dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
-Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
-sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
-magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
-dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
-Lorem ipsum dolor sit amet.
-     </p>
-   <!-- ###CONTENT### END -->
-   </div>
- </div>
+<f:section name="body">
+    <!-- BEGIN wrap -->
+    <div id=wrap>
+        <div class="center">
+            <div id="top">
+                <div class="top-tl">
+                    <div class="top-tr">
+                    </div>
+                </div>
+            </div>
+            <!-- BEGIN head -->
+            <div id=head>
+                <div id=head_content>
+                    <a href="http://www.bolschewistischekurkapelle.org">
+                        <div id=logo>
+                            <h1>Bolschewistische Kurkapelle Schwarz-Rot</h1>
+                        </div>
+                    </a>
+                    <a name="top"></a>
+                </div>
+            </div>
+            <!-- END head -->
+            <!-- BEGIN content col-->
+            <div id=content_col>
+                <div id=content>
+                    <!-- ###CONTENT### START -->
+                    <h2>Content Column</h2>
+                    <p>Lorem <a href=#>ipsum</a> dolor sit amet, consetetur sadipscing
+                        elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
+                        aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
+                        dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
+                        Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
+                        sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
+                        magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
+                        dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
+                        Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
+                        sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
+                        magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
+                        dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
+                        Lorem ipsum dolor sit amet.
+                    </p>
+                    <!-- ###CONTENT### END -->
+                </div>
+            </div>
 
- <div id="bottom">
- 	<div class="bottom-bl">
- 		<div class="bottom-br">
- 			<div id="quicklinks"">
-	 			<ul>
-	 			<!-- ###QUICKLINKS### START -->
-	 			<!-- ###QUICKLINKS### END -->
-	 			</ul>
- 			</div>
- 		</div>
- 	</div>
- <!-- BEGIN UNTEN -->
- <div id=unten>
-  <!-- ###UNTEN### START -->
-  <!-- ###UNTEN### END -->
- </div>
- <!-- END UNTEN-->
- <div id="lang-nav">
-    <!-- ###LANGNAV### START -->
-    <!-- ###LANGNAV### END -->
- </div>
- </div>
-</div>
-</div>
-<!-- END wrap -->
-
-<!-- ###DOCUMENT_BODY### END -->
-</body>
-</html>
+            <div id="bottom">
+                <div class="bottom-bl">
+                    <div class="bottom-br">
+                        <div id="quicklinks"
+                        ">
+                        <ul>
+                            <!-- ###QUICKLINKS### START -->
+                            <!-- ###QUICKLINKS### END -->
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!-- BEGIN UNTEN -->
+            <div id=unten>
+                <!-- ###UNTEN### START -->
+                <!-- ###UNTEN### END -->
+            </div>
+            <!-- END UNTEN-->
+            <div id="lang-nav">
+                <!-- ###LANGNAV### START -->
+                <!-- ###LANGNAV### END -->
+            </div>
+        </div>
+    </div>
+    </div>
+    <!-- END wrap -->
+</f:section>
